# CameraAPI

./: .gitignore
CameraAPI/src/: A4CamListener.cpp  A4CamListener.h  AvatarBody.cpp  AvatarBody.h  BaslerGIGE.h  BrownDistortionModel.cpp  BrownDistortionModel.h  CMakeLists.txt  CalibrationModel.cpp  CalibrationModel.h  CamProperties.cpp  CamProperties.h  CamProperty.cpp  CamProperty.h  CameraAPI.cpp  CameraAPI.h  CameraBox.h  CameraFW.cpp  CameraFW.h  CameraInterfaceEnum.h  CircBuffer.cpp  CircBuffer.h  DepthCamera.cpp  DepthCamera.h  DistortionModel.cpp  DistortionModel.h  ExtrinsicParameter.cpp  ExtrinsicParameter.h  ExtrinsicParameterB3.cpp  ExtrinsicParameterB3.h  GUICameraAPI.h  GrayCamera.h  ICamListener.cpp  ICamListener.h  ICamera.cpp  ICamera.h  IHumanBody.h  IImage.h  IRecorder.h  ImageDepth.cpp  (+38 more)
CameraAPI/src/Skeleton/: Arm.cpp  Arm.h  ArmA5.cpp  ArmA5.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Finger.cpp  Finger.h  GLWidget.cpp  GLWidget.h  Hand.cpp  Hand.h  HandArm.cpp  HandArm.h  HandModel.cpp  Headers.h  LeapToQ2.cpp  LeapToQ2.h  Shape.cpp  Shape.h  Skeleton.cpp  Skeleton.h  Sphere.cpp  Sphere.h  stdafx.cpp
